# wisenotes

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
app/: block_types.py  config.py  main.py  schemas.py
app/blocks/: __init__.py  base.py  registry.py
app/blocks/chapter/: block.py
app/blocks/code/: block.py
app/blocks/math/: block.py
app/blocks/media/: block.py
app/blocks/paragraph/: block.py
app/blocks/text/: block.py
app/config/: accessibility.cfg
app/editor/: mixed_content.py
app/plugins/: base.py  registry.py  word_count.py
app/routes/: api.py  pages.py
app/services/: image_processing.py  notes.py  storage.py
app/static/css/: style.css
app/static/js/: add-block.js  add-button-module.js  app.js  codemirror-config.js  drag-drop.js  image-editor.js  init-layout.js  media-delete.js  media-drop.js  media-picker.js
app/templates/: base.html  index.html  test_codemirror.html  test_editors.html
app/templates/components/: add_block_button.html  block_buttons.html  chapter_tree.html  editor_chapters.html  item.html
app/templates/partials/: app_settings.html  block_display.html  chapter_edit_form.html  chapter_list.html  (+11 more)
app/web/: dependencies.py
docs/: ADDING_BLOCK_TYPES.md  BLOCKS_SYSTEM.md  BLOCK_TYPES_REFERENCE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md
scripts/: check_duplicate_chapter_ids.py
tests/: conftest.py  test_api.py  test_blocks.py  test_health.py  test_note_service.py  test_schemas.py  test_storage.py
(+16 files in other folders)
