[project]
name = "wisenotes"
version = "0.1.0"
description = "FastAPI + Jinja + HTMX note app"
authors = [{ name = "Your Name" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "filelock>=3.15.4",
  "itsdangerous>=2.1.2",
  "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
]

[tool.setuptools.package-dir]
"" = "app"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
